Styled the navbar to be fixed and the links to have a hover effect

--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
 </head>
 <body>
     <header>
-        <nav class="grid-left-sidebar">
-            <p class="logo">Liam Bowie</p>
+        <nav>
             <ul class="flex-spaced-around">
-                <li><a href="#about">About</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#home" class="nav-button">Liam Bowie</a></li>
+                <li><a href="#about" class="nav-button">About</a></li>
+                <li><a href="#skills" class="nav-button">Skills</a></li>
+                <li><a href="#projects" class="nav-button">Projects</a></li>
+                <li><a href="#contact" class="nav-button">Contact</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <section class="hero grid-center">
+        <section id="home" class="hero grid-center">
             <div>
                 <h1>Liam Bowie</h1>
                 <h2>Front end web developer</h2>
@@ -130,7 +130,7 @@
         </section>
 
         <section id="projects">
-            <h3 style="text-align: center">Projects I'm working on</h3>
+            <h3 class="block-center">Projects I'm working on</h3>
             <div class="carousel">
                 <div class="card">
                     <div class="info">
