Added animation to skills icons to fade in from the right when the images scroll into view. Figcaptions now appear on hover.

--- a/index.html
+++ b/index.html
@@ -89,52 +89,52 @@
                     <h3>Skills</h3>
                     <p>Placeholder: Description of displayed skills</p>
                 </div>
-                <div id="web-fundamentals" class="skills-images flex-spaced-evenly">
-                    <figure>
+                <div id="web-fundamentals" class="skills-images flex-spaced-evenly ">
+                    <figure class="icon hidden">
                         <img src="./img/html5.svg" alt="HTML5 icon" aria-label="HTML5">
                         <figcaption>HTML5</figcaption>
                     </figure>
-                    <figure>
+                    <figure class="icon hidden">
                         <img src="./img/css3.svg" alt="CSS3 icon" aria-label="CSS3">
                         <figcaption>CSS3</figcaption>
                     </figure>
-                    <figure>
+                    <figure class="icon hidden">
                         <img src="./img/javascript.svg" alt="JavaScript icon" aria-label="JavaSCript">
                         <figcaption>JS</figcaption>
                     </figure>
                 </div>
                 <div id="web-frameworks" class="skills-images  flex-spaced-evenly">
-                    <figure>
+                    <figure class="icon hidden">
                         <img src="./img/react.svg" alt="ReactJS logo" aria-label="React JS">
                         <figcaption>React</figcaption>
                     </figure>
-                    <figure>
+                    <figure class="icon hidden">
                         <img src="./img/redux.svg" alt="Redux logo" aria-label="Redux JS">
                         <figcaption>Redux</figcaption>
                     </figure>
                 </div>
                 <div id="testing" class="skills-images flex-spaced-evenly">
-                    <figure>
+                    <figure class="icon hidden">
                         <img src="./img/mocha.svg" alt="Mocha JS logo" aria-label="Mocha JS testing framework">
                         <figcaption>Mocha</figcaption>
                     </figure>
-                    <figure>
+                    <figure class="icon hidden">
                         <img src="./img/jest.svg" alt="Jest JS logo" aria-label="Jest JS testing framework">
                         <figcaption>Jest</figcaption>
                     </figure>
                 </div>
                 <div id="version-control" class="skills-images flex-spaced-evenly">
-                    <figure>
+                    <figure class="icon hidden">
                         <img src="./img/git-bash.svg" alt="Git Bash logo" aria-label="git bash version control">
                         <figcaption>Git Bash</figcaption>
                     </figure>
-                    <figure>
+                    <figure class="icon hidden">
                         <a href="https://github.com/LiamBowie"><img src="./img/github.svg" alt="GitHub logo" aria-label="GitHub link"></a>
                         <figcaption>GitHub</figcaption>
                     </figure>
                 </div>
                 <div id="Other languages" class="skills-images flex-spaced-evenly">
-                    <figure>
+                    <figure class="icon hidden">
                         <img src="./img/python.svg" alt="Python icon" aria-label="python programming language">
                         <figcaption>Python</figcaption>
                     </figure>
