Added a tilt effect when the user hovers over the profile image. This feature is responsicve and works on smaller screen sizes.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,20 @@
         </section>
 
         <section id="about" class="grid-bio block-center">
-            <img src="./img/profile.jpg" alt="Liam Bowie smiling" class="profile-photo">
+            <div class="tilt-container">
+                <div class="tilt-box-wrap">
+                    <span class="t_over"></span>
+                    <span class="t_over"></span>
+                    <span class="t_over"></span>
+                    <span class="t_over"></span>
+                    <span class="t_over"></span>
+                    <span class="t_over"></span>
+                    <span class="t_over"></span>
+                    <span class="t_over"></span>
+                    <span class="t_over"></span>
+                    <img src="./img/profile.jpg" alt="Liam Bowie smiling" class="profile-photo tilt-box">
+                </div>
+            </div>
                 <div>
                     <form class="bio-length-options">
                         <fieldset>
@@ -89,7 +102,7 @@
                     <h3>Skills</h3>
                     <p>Placeholder: Description of displayed skills</p>
                 </div>
-                <div id="web-fundamentals" class="skills-images flex-spaced-evenly ">
+                <div id="web-fundamentals" class="skills-images">
                     <figure class="icon hidden">
                         <img src="./img/html5.svg" alt="HTML5 icon" aria-label="HTML5">
                         <figcaption>HTML5</figcaption>
@@ -103,7 +116,7 @@
                         <figcaption>JS</figcaption>
                     </figure>
                 </div>
-                <div id="web-frameworks" class="skills-images  flex-spaced-evenly">
+                <div id="web-frameworks" class="skills-images">
                     <figure class="icon hidden">
                         <img src="./img/react.svg" alt="ReactJS logo" aria-label="React JS">
                         <figcaption>React</figcaption>
@@ -113,7 +126,7 @@
                         <figcaption>Redux</figcaption>
                     </figure>
                 </div>
-                <div id="testing" class="skills-images flex-spaced-evenly">
+                <div id="testing" class="skills-images">
                     <figure class="icon hidden">
                         <img src="./img/mocha.svg" alt="Mocha JS logo" aria-label="Mocha JS testing framework">
                         <figcaption>Mocha</figcaption>
@@ -123,7 +136,7 @@
                         <figcaption>Jest</figcaption>
                     </figure>
                 </div>
-                <div id="version-control" class="skills-images flex-spaced-evenly">
+                <div id="version-control" class="skills-images">
                     <figure class="icon hidden">
                         <img src="./img/git-bash.svg" alt="Git Bash logo" aria-label="git bash version control">
                         <figcaption>Git Bash</figcaption>
@@ -133,7 +146,7 @@
                         <figcaption>GitHub</figcaption>
                     </figure>
                 </div>
-                <div id="Other languages" class="skills-images flex-spaced-evenly">
+                <div id="Other languages" class="skills-images">
                     <figure class="icon hidden">
                         <img src="./img/python.svg" alt="Python icon" aria-label="python programming language">
                         <figcaption>Python</figcaption>
