Update scrolling skills to include descriptive text that changes as new skills become visible and adjust sizing of icons

--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
             <div class="grid-2-columns">
                 <div class="skills-text">
                     <h3>Skills</h3>
-                    <p>Placeholder: Description of displayed skills</p>
+                    <p id="skills-description">Placeholder: Description of displayed skills</p>
                 </div>
-                <div id="web-fundamentals" class="skills-images">
+                <div id="Web Fundamentals" class="skills-images">
                     <figure class="icon hidden">
                         <img src="./img/html5.svg" alt="HTML5 icon" aria-label="HTML5">
                         <figcaption>HTML5</figcaption>
@@ -116,7 +116,7 @@
                         <figcaption>JS</figcaption>
                     </figure>
                 </div>
-                <div id="web-frameworks" class="skills-images">
+                <div id="Frontend Frameworks" class="skills-images">
                     <figure class="icon hidden">
                         <img src="./img/react.svg" alt="ReactJS logo" aria-label="React JS">
                         <figcaption>React</figcaption>
@@ -126,7 +126,7 @@
                         <figcaption>Redux</figcaption>
                     </figure>
                 </div>
-                <div id="testing" class="skills-images">
+                <div id="Testing Frameworks" class="skills-images">
                     <figure class="icon hidden">
                         <img src="./img/mocha.svg" alt="Mocha JS logo" aria-label="Mocha JS testing framework">
                         <figcaption>Mocha</figcaption>
@@ -136,7 +136,7 @@
                         <figcaption>Jest</figcaption>
                     </figure>
                 </div>
-                <div id="version-control" class="skills-images">
+                <div id="Version Control" class="skills-images">
                     <figure class="icon hidden">
                         <img src="./img/git-bash.svg" alt="Git Bash logo" aria-label="git bash version control">
                         <figcaption>Git Bash</figcaption>
@@ -146,7 +146,7 @@
                         <figcaption>GitHub</figcaption>
                     </figure>
                 </div>
-                <div id="Other languages" class="skills-images">
+                <div id="Other Languages" class="skills-images">
                     <figure class="icon hidden">
                         <img src="./img/python.svg" alt="Python icon" aria-label="python programming language">
                         <figcaption>Python</figcaption>
